@@ -1,4 +1,8 @@
 ** v2.05, 29.07.2016**
+* Add a LocationPanel. All credits belong to Darth Predator (Shadow&Light).
+* Code cleanup.
+
+** v2.05, 29.07.2016**
 * Install: Fix Datatexts if ElvUI_SLE is enabled.
 * Misc: Attempt to fix a weird nil error.
 * Skins: Add quest level to the ObjectiveTracker.
